--- a/public/css/styles/__Product.css
+++ b/public/css/styles/__Product.css
@@ -189,7 +189,7 @@
         height: 100vh;
         overflow-y: scroll;
         width: 40%;
-        background-color: #ebffeb;
+        background-color: var(--my-color1);
         transition: var(--transition);
         box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
         z-index:5000;
