--- a/public/css/styles/__nav.css
+++ b/public/css/styles/__nav.css
@@ -17,7 +17,7 @@ body {
 #navbar,
 #navbar_mob {
     background-color: #FFFF !important;
-    /* background-color: #c0ffc0; */
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
 #navbar {
@@ -27,19 +27,54 @@ body {
 
 #navbar .search-input input
 {
-    width:260px;
+    width:290px;
     height: 44px;
     border: transparent !important;
     background-color: #eeee;
-    padding-left: 20px;
+    padding-left: 40px;
     border-radius: 35px;
     font-size: 14px;
+}
+
+#navbar .search-input input:focus
+{
+    outline: 2px solid #001d562d;
+}
+
+#navbar .shortcuts-letters span:first-of-type,
+#navbar .shortcuts-letters span:last-of-type,
+.search .shortcuts-letters span
+{
+    background-color: #3b3b3b;
+    border-radius: 2px;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 77%;
+    color: #FFFF;
+    font-size: 13px;
+}
+
+#navbar .shortcuts-letters span:last-of-type
+{
+    position: absolute;
+    left: 85%;
+}
+
+.search .shortcuts-letters span
+{
+    position: static !important;
+    width: 30px !important;
+    height: 22px !important;
 }
 
 #navbar .search-input svg
 {
     position: absolute;
-    left: 80%;
+    left: 2%;
     width: 40px;
 }
 
@@ -223,20 +258,6 @@ nav .badge-pill {
 }
 
 
-
-
-/* @media (max-width:992px)
-{
-    #navbar .navCollapse
-    {
-        width: 50% !important;
-        height: 100vh;
-        position: absolute;
-        top:0;
-        left:0;
-        background-color: #FFFF !important;
-    }
-} */
 
 @media (max-width:554px) {
     nav .all-app-navs-open {
