--- a/public/css/styles/home.css
+++ b/public/css/styles/home.css
@@ -8,7 +8,7 @@
 
 :root
 {
-    --main-color1:#002f8d;
+    /* --main-color1:#002f8d; */
     --main-color1:#014797;
     --my-color1:#e0eaff;
     /* --my-color1:#ffecce; */
@@ -18,6 +18,44 @@
     --font-DM-SANS:'DM Sans', sans-serif;
 }
 
+.alert-success
+{
+    background-color: #014797 !important;
+    color: #e0eaff !important;
+    border: transparent !important;
+    border-left: 3px solid #e0eaff;
+    box-shadow:rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px !important;
+}
+.alert-success button
+{
+    border: transparent !important;
+    outline: none !important;
+}
+.alert-success button span
+{
+    color: #e0eaff !important;
+}
+
+.btn:focus,
+.btn:active,
+.btn.active,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus,
+.btn.active.focus,
+.btn-success:focus,
+.btn-success:active,
+.btn-success.active,
+.btn-success:active:focus,
+.btn-success.active:focus,
+.btn-success.focus,
+.btn-success:active.focus,
+.btn-success.active.focus,
+.btn-success.active.focus {
+    outline: 0.3px solid var(--main-color1) !important;
+}
 
 .body_shadow
 {
