--- a/public/css/styles/registerStyles/__registerImgsSlider.css
+++ b/public/css/styles/registerStyles/__registerImgsSlider.css
@@ -4,24 +4,34 @@
     height: 100vh;
 }
 
-.signup_images_slider .carousel img
+.signup_images_slider #carouselExampleCaptions img
 {
     object-fit: cover !important;
     height: 100vh !important;
-    position: relative !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* position: relative !important;
+    z-index:0; */
 }
 
-.signup_images_slider .carousel img::after
+.signup_images_slider #carouselExampleCaptions #img-shadow
+{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+.signup_images_slider #carouselExampleCaptions #img-shadow::after
 {
     content: "";
-    background: linear-gradient(#00000098,#00000098);
-    background: #000000e6;
+    background: linear-gradient(180deg, #00000016 30%,#000000dc 80%);
     width: 100%;
     height: 100%;
     position:absolute;
     top: 0;
     left: 0;
-    z-index:5;
+    z-index:10;
 }
 
 /* .carousel-indicators
@@ -29,7 +39,7 @@
     justify-content: end !important;
 } */
 
-.carousel-indicators li {
+/* .carousel-indicators li {
     height: 8px !important;
     border-radius: 20px !important;
     width: 10px !important;
@@ -40,4 +50,23 @@
 {
     width: 30px !important;
     background-color: var(--main-color1) !important;
+} */
+
+.signup_images_slider #carouselExampleCaptions .carousel-caption
+{
+    right: 0 !important;
+    left: 0 !important;
+}
+
+.signup_images_slider #carouselExampleCaptions .carousel-caption h5
+{
+    font-size: 34px;
+    color: #1a66be !important;
+    font-family: var(--font-DM-SANS) !important;
+    font-weight: 500;
+}
+
+.signup_images_slider #carouselExampleCaptions .carousel-caption p
+{
+    font-family: var(--font-DM-SANS);
 }
