Add new feature:Notifications. With this new feature, users will receive notification for every successful sale directly on their dashboard, ensuring they stay informed and up-to-date on their transactions. Changes made in App folder added new folder Notifications with new file inside it ProductSold.php this file handls notifications to create new notification in each successful user transaction, and new file Notification Controller inside Controllers folder use it to get user notifications and send it to notification.blade.php view to display it in user's dashboard, new Model Notification, new database table notifications and migrations, new css file __notification.css inside dashboardStyles folder used to styled notification page, new livewire notifications, and new views notification,blade.php and notifications.blade.php and new route has been added to appliccation routes.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,7 @@
 @import url(./styles/cartStyles/__cart.css);
 @import url(./styles/__Product.css);
 @import url(./styles/__checkout.css);
+@import url(./styles/404.css);
 
 
 
