--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@
 
 @import url(./styles/home.css);
 @import url(./styles/__registration.css);
+@import url(./styles/__login.css);
 @import url(./styles/__dashbaord.css);
 @import url(./styles/__nav.css);
 @import url(./styles/__footer.css);
